# jabberwok

./: .gitignore  .ignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-dmg.yml  release.yml
config/: jabberwok.toml
media/: off.raw  on.raw
src/: audio.rs  cli.rs  daemon.rs  devices.rs  input.rs  logs.rs  main.rs  models.rs  setup.rs  state.rs  transcribe.rs
src/config/: devices.rs  mod.rs  models.rs  paths.rs  schema.rs
src/os/: linux.rs  mod.rs  rdev_ptt.rs  windows.rs
src/os/macos/: input.rs  menu.rs  mod.rs  objc_util.rs  overlay.rs  permissions.rs  service.rs  setup.rs  state.rs  tutorial.rs
xtask/: Cargo.toml
xtask/assets/macos/: Info.plist  LaunchAgent.plist  app-icon.icns
xtask/src/: linux.rs  macos.rs  main.rs  package.rs  release.rs  service.rs  windows.rs
