[package]
name = "jabberwok"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "=1.0.102"
chrono = "=0.4.44"
clap = { version = "=4.6.0", features = ["derive"] }
cpal = "=0.17.3"
libc = "=0.2.183"
ctrlc = "=3.5.2"
flate2 = "=1.1.9"
fs2 = "=0.4.3"
hound = "=3.5.1"
reqwest = { version = "=0.13.2", features = ["blocking", "stream"] }
audioadapter-buffers = "=2.0.0"
rubato = "=1.0.1"
serde = { version = "=1.0.228", features = ["derive"] }
hostname = "=0.4.2"
tar = "=0.4.45"
toml = "=1.1.0"
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-logfmt = "=0.3.7"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
tempfile = "=3.27.0"
transcribe-rs = { version = "=0.3.3", features = ["whisper-cpp", "onnx"] }
enigo = "=0.6.1"
rdev = "=0.5.3"
rustfft = "=6.4.1"
sha2 = "=0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
block = "=0.1.6"
cocoa = "=0.26.1"
objc = "=0.2.7"

# Suppress the noisy `cargo-clippy` cfg warnings that come from `objc 0.2`'s
# internal macros (a known upstream issue).
[lints.rust]
unexpected_cfgs = "allow"
